Blog and Gallery

--- a/block-BHaabk/index.html
+++ b/block-BHaabk/index.html
@@ -11,3 +11,72 @@
 
 7. Use flexbox properties and values to create columns.
  -->
+
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Blog and Gallery</title>
+     <link rel="stylesheet" href="style.css">
+ </head>
+ <header class='header'>
+     
+    <img class='img_header' src="x1.png" alt="imdb logo">
+    <h1>
+        Welcome To IMDb!
+    </h1>
+    <nav class='nav_header'>
+        <a href="https://www.imdb.com">IMDb Pro</a>
+        <a href="https://www.imdb.com">Watchlist</a>
+        <a href="https://www.imdb.com">Login</a>
+    </nav>
+ </header>
+ <main>
+     <section class='main_section1'>
+<article class='art1'>
+<h4>
+    This is the first article
+</h4>
+<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores nemo assumenda tempora rem placeat inventore modi animi nesciunt debitis nobis eveniet in ipsam dolore, minus unde deleniti nam sit. Expedita.</p>
+</article>
+<article class='art1'>
+    <h4>
+        This is the second article
+    </h4>
+    <img class='img_header' src="x1.png" alt="imdb logo">
+    </article>
+     </section>
+
+     <section class='main_section2'>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+     </section>
+     <section class='main_section2'>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+        <article class='art_gallery'>
+            <img class='img_header' src="x1.png" alt="imdb logo">
+        </article>
+     </section>
+     <footer>
+         <h1>
+             BYE
+         </h1>
+     </footer>
+ </main>
+ <body>
+     
+ </body>
+ </html>
