--- a/block-BHaabn/index.html
+++ b/block-BHaabn/index.html
@@ -6,3 +6,48 @@
 - Using CSS resets is necessary.
 - Use semantic tags and keep the nesting and indentation proper.
 -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class='header'>
+        <img src='aclogo.png' alt="aclogo">
+     <nav>
+        <a href="https://launchpad.altcampus.school/modules/5f04f08c77f9d55b38da799f/topics/5f23fea331e3a7659f70e6a2/exercises/5f23fea331e3a7659f70e6a9">HOME</a>
+        <a href="https://launchpad.altcampus.school/modules/5f04f08c77f9d55b38da799f/topics/5f23fea331e3a7659f70e6a2/exercises/5f23fea331e3a7659f70e6a9">GALLERY</a>
+        <a href="https://launchpad.altcampus.school/modules/5f04f08c77f9d55b38da799f/topics/5f23fea331e3a7659f70e6a2/exercises/5f23fea331e3a7659f70e6a9">ABOUT</a>
+     </nav>
+    </header>
+    <main>
+        <h1>
+            GALLERY
+        </h1>
+        <section class='sec_1'>
+            <img src='01.png'>
+            <img src='02.png'>
+            <img src='03.png'>
+        </section>
+        <section class='sec_1'>
+            <img src='04.png'>
+            <img src='05.png'>
+            <img src='06.png'>
+        </section>
+    </main>
+
+    <footer class='header'>
+        <p >
+            @AltCampus
+        </p>
+        <img src="fbtw.png">
+    </footer>
+</body>
+</html>
